# odoo-json2x-integration-examples

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
extra/: releases_history.md
